<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pastel_green"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="283dp"
        android:layout_height="240dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButtonQ1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radioButtonQ1Label"
            android:textSize="20sp"
            android:fontFamily="@font/adorable_handmade" />

        <RadioButton
            android:id="@+id/radioButtonQ2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonQ2Label"
            android:textSize="20sp"
            android:fontFamily="@font/adorable_handmade" />

        <RadioButton
            android:id="@+id/radioButtonQ3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonQ3Label"
            android:textSize="20sp"
            android:fontFamily="@font/adorable_handmade" />

        <RadioButton
            android:id="@+id/radioButtonQ4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonQ4Label"
            android:textSize="20sp"
            android:fontFamily="@font/adorable_handmade" />

        <RadioButton
            android:id="@+id/radioButtonQ5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonQ5Label"
            android:textSize="20sp"
            android:fontFamily="@font/adorable_handmade" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonA"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/blue"
        android:drawableLeft="@drawable/ic_heart_foreground"
        android:fontFamily="@font/adorable_handmade"
        android:onClick="choiceSelectHandler"
        android:text="@string/buttonALabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/buttonB"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/green"
        android:drawableLeft="@drawable/ic_star_foreground"
        android:fontFamily="@font/adorable_handmade"
        android:onClick="choiceSelectHandler"
        android:text="@string/buttonBLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/buttonC"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="220dp"
        android:backgroundTint="@color/red"
        android:drawableLeft="@drawable/ic_circle_foreground"
        android:fontFamily="@font/adorable_handmade"
        android:onClick="choiceSelectHandler"
        android:text="@string/buttonCLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/buttonD"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/yellow"
        android:drawableLeft="@drawable/ic_smiley_foreground"
        android:fontFamily="@font/adorable_handmade"
        android:onClick="choiceSelectHandler"
        android:text="@string/buttonDLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/instructionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/adorable_handmade"
        android:text="@string/instructionTextLabel"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>